--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="mainImage" src="" alt="Image principale">
+        <img id="mainImage" src="./png/" alt="Image principale">
         <div id="debugZones"></div>
     </div>
 
